# sqlalchemy_course

./: pyproject.toml
src/: config.py  database.py  models.py
src/queries/: core.py
